package entity;

import constants.Status;

public class Customer {


    private Long customerId;
    private String company;
    private String contactPerson;
    private  String address1;
    private String address2;
    private String postOffice;
    private String parish;
    private String telephone;
    private String email;
    private Status status;
}
