@startuml
'https://plantuml.com/class-diagram

class Address{
     String address1
     String address2
     String postOffice
     String parish
}
class Admin
class Customer
class PaySlip
class Rate
class Route
class Staff
class Trip
class TripReport
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList



class ArrayList {
Object[] elementData
size()
}

enum TimeUnit {
DAYS
HOURS
MINUTES
}

@enduml